--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,14 @@
     --text-black-700: #504e70;
 }
 
+body.dark {
+    --bg-black-900: #151515;
+    --bg-black-100: #222222;
+    --bg-black-50: #393939;
+    --text-black-900: #ffffff;
+    --text-black-700: #e9e9e9;
+}
+
 body {
     line-height: 1.5;
     font-size: 16px;
@@ -742,6 +750,12 @@ h3.my-profession {
 }
 
 @media (max-width:767px) {
+    .contact .contact-form .col-6,
+    .contact .contact-info-item,
+    .portfolio .portfolio-item,
+    .service .service-item,
+    .about .about-content .experience,
+    .about .about-content .education,
     .about .about-content .skills,
     .about .about-content .personal-info {
         flex: 0 0 100%;
