--- a/css/style.css
+++ b/css/style.css
@@ -213,6 +213,8 @@ ul {
     background: var(--skin-color);
     display: inline-block;
     position: relative;
+    left: 12px;
+    top: 3px;
 }
 
 .aside .nav-toggler span::before {
@@ -727,6 +729,10 @@ h3.my-profession {
     .about .about-content .personal-info .info-item p span {
         display: block;
         margin-left: 0;
+    }
+
+    .aside .nav-toggler {
+        display: block;
     }
 }
 
